--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,12 @@
     "server:watch": "nodemon server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.4.3",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "yup": "^1.3.2"
   }
 }
